# torchhull

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/src/: changelog.doctree  contributing.doctree
.doctrees/src/api/: torchhull.doctree
.doctrees/src/api/torchhull/: candidate_voxels_to_wireframes.doctree  gaussian_blur.doctree  marching_cubes.doctree  sparse_visual_hull_field.doctree  store_curve_network.doctree  visual_hull.doctree  visual_hull_with_candidate_voxels.doctree
.github/: release-drafter.yml
.github/workflows/: build.yml  docs.yml  lint.yml  pypi.yml
benchmarks/: test_bench_gaussian_blur.py  test_bench_marching_cubes.py  test_bench_visual_hull.py
data/: README.md  generate_dataset.py
docs/: conf.py  index.md
docs/src/: contributing.md
docs/src/api/: torchhull.rst
docs/src/api/torchhull/: candidate_voxels_to_wireframes.rst  gaussian_blur.rst  marching_cubes.rst  sparse_visual_hull_field.rst  store_curve_network.rst  visual_hull.rst  visual_hull_with_candidate_voxels.rst
src/: changelog.html  contributing.html
src/api/: torchhull.html
src/api/torchhull/: candidate_voxels_to_wireframes.html  gaussian_blur.html  marching_cubes.html  sparse_visual_hull_field.html  store_curve_network.html  visual_hull.html  visual_hull_with_candidate_voxels.html
src/torchhull/: __init__.py
src/torchhull/_C/: CMakeLists.txt
src/torchhull/_C/include/torchhull/: cuda_utils.h  gaussian_blur.h  image_utils.h  io.h  marching_cubes.h  marching_cubes_utils.h  math.h  preprocessor.h  ravelled_sparse_tensor.h  stdgpu_allocator.h  visual_hull.h
src/torchhull/_C/python/: bindings.cpp
src/torchhull/_C/src/: gaussian_blur.cpp  gaussian_blur_cuda.cu  io.cpp  marching_cubes.cpp  marching_cubes_cuda.cu  marching_cubes_table.h  visual_hull.cpp  visual_hull_cuda.cu
tests/: test_gaussian_blur.py  test_marching_cubes.py  test_visual_hull.py
tools/: process_changelog.py
